--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
 <a href="faq.html">faq
     
 </a>
-    <h1 class="index-title">我是首頁</h1>
+    <h1 class="index-title">faq</h1>
     <img src="/week4/assets/cat-0c0689ae.jpg" style="width: 300px;" alt="cat">
 
     <footer class="footer">我是 footer</footer>
